[package]
name = "steghunt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
sha256 = { version = "1.0.3" }
crossterm = { version = "0.23" }
which = { version = "4.2.5" }
